--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="text flex">
                         <h3>See my <span class="highlight ">GITHUB</span></h3>
                         <p>Have a glance on my Github to see my experience in coding.</p>
-                        <button class="btn github-btn ">GITHUB</button>
+                        <a href="https://github.com/sanjay9160" target="_blank"><button class="btn github-btn ">GITHUB</button></a>
                     </div>
                 </div>
             </section>
@@ -110,7 +110,7 @@
                                 <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Hamberger menu</li>
                                 <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Customised Owl carousel</li>
                             </ul>
-                            <button class="btn live-view-btn ">LIVE VIEW</button>
+                            <button class="btn live-view-btn "><a href="file:///C:/Users/thaku/OneDrive/Desktop/UsabilityHub/index.html" target="_blank">LIVE VIEW</a></button>
                         </div>
                     </div>
                     <div class="project project-2 ">
@@ -123,7 +123,7 @@
                                 <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Hamberger menu</li>
                                 <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Customised Owl carousel</li>
                             </ul>
-                            <button class="btn live-view-btn ">LIVE VIEW</button>
+                            <button class="btn live-view-btn "><a href="file:///C:/Users/thaku/OneDrive/Desktop/paper%20portfolio/index.html" target="_blank">LIVE VIEW</a></button>
                         </div>
                     </div>
                     <div class="project project-3 ">
@@ -136,7 +136,7 @@
                                 <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Hamberger menu</li>
                                 <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Customised Owl carousel</li>
                             </ul>
-                            <button class="btn live-view-btn ">LIVE VIEW</button>
+                            <button class="btn live-view-btn "><a href="file:///C:/Users/thaku/OneDrive/Desktop/corso/index.html" target="_blank">LIVE VIEW</a></button>
                         </div>
                     </div>
                     <div class="project project-4 ">
@@ -149,7 +149,7 @@
                                 <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Hamberger menu</li>
                                 <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Customised Owl carousel</li>
                             </ul>
-                            <button class="btn live-view-btn ">LIVE VIEW</button>
+                            <button class="btn live-view-btn "><a href="file:///C:/Users/thaku/OneDrive/Desktop/sidcup%20family%20golf/index.html" target="_blank">LIVE VIEW</a></button>
                         </div>
                     </div>
                 </div>
@@ -188,8 +188,8 @@
             <footer>
                 <p><span class="highlight ">Thank You</span> for giving a visit.</p>
                 <p>Feel free to contact me anytime</p>
-                <i class="fa fa-github "></i>
-                <i class="fa fa-linkedin "></i>
+                <a href="https://github.com/sanjay9160" target="_blank"><i class="fa fa-github "></a></i>
+                <a href="https://www.linkedin.com/in/sanjay-singh-02449a262" target="_blank"><i class="fa fa-linkedin "></a></i>
                 <p class="notice ">[ Available for interview ASAP Virtual & Phone - Anytime. In-person - 24 hours notice. ]</p>
             </footer>
 
