--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h3>HI THERE !</h3>
                 <h1>I'M <span class="">sanjay singh</span></h1>
                 <h1>I'M a <span>front end web developer</span></h1>
-                <button class="btn">about me <span class="fa fa-user"></span></button>
+                <a href="#about"><button class="btn">about me <span class="fa fa-user"></span></button></a>
             </div>
 
             <!--about-section-->
