--- a/index.html
+++ b/index.html
@@ -103,53 +103,53 @@
                     <div class="project project-1 ">
                         <img src="./img/Capture-1.PNG " width="100% ">
                         <div class="description ">
-                            <h4>GYM WEBSITE</h4>
+                            <h4>Usability Hub</h4>
                             <ul>
-                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;HTML CSS BOOTSTRAP</li>
-                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Bootstrap grid</li>
-                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Hamberger menu</li>
-                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Customised Owl carousel</li>
+                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;HTML CSS JAVASCRIPT</li>
+                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Using CSS Grid</li>
+                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Create Menu with Jquery</li>
+                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Using Position Property in CSS</li>
                             </ul>
-                            <a href="file:///C:/Users/thaku/OneDrive/Desktop/UsabilityHub/index.html" target="_blank"><button class="btn live-view-btn ">LIVE VIEW</button></a>
+                            <a href="https://sanjay9160.github.io/Usability-hub/" target="_blank"><button class="btn live-view-btn ">LIVE VIEW</button></a>
                         </div>
                     </div>
                     <div class="project project-2 ">
                         <img src="./img/Capture-2.PNG " alt=" " width="100% ">
                         <div class="description ">
-                            <h4>GYM WEBSITE</h4>
+                            <h4>The Paper Portfolio</h4>
                             <ul>
-                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;HTML CSS BOOTSTRAP</li>
-                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Bootstrap grid</li>
-                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Hamberger menu</li>
-                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Customised Owl carousel</li>
+                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;HTML CSS JAVASCRIPT</li>
+                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Using CSS Flex</li>
+                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Create slider with animations</li>
+                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Hamberger menu with Javascript</li>
                             </ul>
-                            <a href="file:///C:/Users/thaku/OneDrive/Desktop/paper%20portfolio/index.html" target="_blank"><button class="btn live-view-btn ">LIVE VIEW</button></a>
+                            <a href="https://sanjay9160.github.io/The-Paper-Portfolio/" target="_blank"><button class="btn live-view-btn ">LIVE VIEW</button></a>
                         </div>
                     </div>
                     <div class="project project-3 ">
                         <img src="./img/Capture-3.PNG " alt=" " width="100% ">
                         <div class="description ">
-                            <h4>GYM WEBSITE</h4>
+                            <h4>Corso</h4>
                             <ul>
-                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;HTML CSS BOOTSTRAP</li>
-                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Bootstrap grid</li>
-                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Hamberger menu</li>
-                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Customised Owl carousel</li>
+                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;HTML CSS JAVASCRIPT</li>
+                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Using Bootstrap Grid</li>
+                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Create Carousel with Bootstrap</li>
+                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Video Presentation with JS</li>
                             </ul>
-                            <a href="file:///C:/Users/thaku/OneDrive/Desktop/corso/index.html" target="_blank"><button class="btn live-view-btn ">LIVE VIEW</button></a>
+                            <a href="https://sanjay9160.github.io/corso/" target="_blank"><button class="btn live-view-btn ">LIVE VIEW</button></a>
                         </div>
                     </div>
                     <div class="project project-4 ">
                         <img src="./img/Capture-4.PNG " alt=" " width="100% ">
                         <div class="description ">
-                            <h4>GYM WEBSITE</h4>
+                            <h4>Sidcup Family Golf</h4>
                             <ul>
-                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;HTML CSS BOOTSTRAP</li>
-                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Bootstrap grid</li>
-                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Hamberger menu</li>
+                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;HTML CSS JAVASCRIPT</li>
+                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Using CSS Flex</li>
+                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Creating Amazing Hover Effects</li>
                                 <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Customised Owl carousel</li>
                             </ul>
-                            <a href="file:///C:/Users/thaku/OneDrive/Desktop/sidcup%20family%20golf/index.html" target="_blank"><button class="btn live-view-btn ">LIVE VIEW</button></a>
+                            <a href="https://sanjay9160.github.io/sidcup-family-golf/" target="_blank"><button class="btn live-view-btn ">LIVE VIEW</button></a>
                         </div>
                     </div>
                 </div>
