--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;HTML CSS JAVASCRIPT</li>
                                 <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Using Bootstrap Grid</li>
                                 <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Create Carousel with Bootstrap</li>
-                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Video Presentation with JS</li>
+                                <li><span class="fa fa-long-arrow-right "></span>&nbsp; &nbsp;Form Validation with JS</li>
                             </ul>
                             <a href="https://sanjay9160.github.io/corso/" target="_blank"><button class="btn live-view-btn ">LIVE VIEW</button></a>
                         </div>
