--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!--sidebar-->
         <div class="sidebar flex" id="sidebar" data-aos="fade-right">
             <div class="my-image">
-                <img src="./img/sanjay.png.jpg" alt="" width="100%">
+                <img src="./img/IMG20230416115331.jpg" alt="" width="100%">
                 <h2>sanjay singh</h2>
                 <h3>front end web developer</h3>
             </div>
